--- a/src/bz-transaction-view.ui
+++ b/src/bz-transaction-view.ui
@@ -74,7 +74,7 @@
               </object>
             </child>
             <child>
-              <object class="GtkProgressBar">
+              <object class="BzProgressBar">
                 <property name="hexpand">TRUE</property>
                 <property name="margin-bottom">15</property>
                 <property name="margin-start">15</property>
