--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -20,7 +20,7 @@
                 <property name="height-request">40</property>
                 <property name="orientation">horizontal</property>
                 <property name="center-widget">
-                  <object class="GtkProgressBar">
+                  <object class="BzProgressBar">
                     <property name="vexpand">TRUE</property>
                     <property name="width-request">300</property>
                     <property name="margin-top">15</property>
