TransactionManager: slight UI adjustments, less annoying for now

--- a/src/bz-transaction-manager.ui
+++ b/src/bz-transaction-manager.ui
@@ -21,6 +21,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="GtkListItem">
+    <property name="activatable">FALSE</property>
     <property name="child">
       <object class="BzTransactionView">
         <property name="margin-start">5</property>
