--- a/src/bz-transaction-view.ui
+++ b/src/bz-transaction-view.ui
@@ -105,7 +105,7 @@
                           <class name="title-4"/>
                         </style>
                         <property name="ellipsize">end</property>
-                        <property name="label">Installing:</property>
+                        <property name="label" translatable="yes">Installing:</property>
                       </object>
                     </child>
                     <child>
@@ -141,7 +141,7 @@
                           <class name="title-4"/>
                         </style>
                         <property name="ellipsize">end</property>
-                        <property name="label">Updating:</property>
+                        <property name="label" translatable="yes">Updating:</property>
                       </object>
                     </child>
                     <child>
@@ -177,7 +177,7 @@
                           <class name="title-4"/>
                         </style>
                         <property name="ellipsize">end</property>
-                        <property name="label">Removing:</property>
+                        <property name="label" translatable="yes">Removing:</property>
                       </object>
                     </child>
                     <child>
