--- a/src/bz-preferences-dialog.ui
+++ b/src/bz-preferences-dialog.ui
@@ -3,12 +3,11 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
   <template class="BzPreferencesDialog" parent="AdwPreferencesDialog">
-    <property name="content-height">1000</property>
+    <property name="content-height">500</property>
     <property name="search-enabled">True</property>
     <child>
       <object class="AdwPreferencesPage">
-        <property name="title">Preferences</property>
-        <!-- <property name="description">Settings controlling the behavior of Bazaar</property> -->
+        <property name="title" translatable="yes">Preferences</property>
         <property name="use-underline">True</property>
         <child>
           <object class="AdwPreferencesGroup">
