--- a/src/bz-update-dialog.ui
+++ b/src/bz-update-dialog.ui
@@ -4,11 +4,11 @@
   <requires lib="Adw" version="1.0"/>
   <template class="BzUpdateDialog" parent="AdwAlertDialog">
     <responses>
-      <response id="ignore">Later</response>
-      <response id="install" appearance="suggested">Install Now</response>
+      <response id="ignore" translatable="yes">Later</response>
+      <response id="install" appearance="suggested" translatable="yes">Install Now</response>
     </responses>
-    <property name="heading">Updates Are Available</property>
-    <property name="body">The following applications are eligible for updates. Would you like to install them?</property>
+    <property name="heading" translatable="yes">Updates Are Available</property>
+    <property name="body" translatable="yes">The following applications are eligible for updates. Would you like to install them?</property>
     <property name="extra-child">
       <object class="GtkScrolledWindow">
         <property name="width-request">300</property>
